cmake_minimum_required(VERSION 3.16)
project(Hello)
set(SOURCE_FILES main.c chunk.h chunk.c common.h debug.h debug.c memory.h memory.c value.h value.c)
add_executable(Hello ${SOURCE_FILES})
# add_executable(ll_test ll_test.c)
# target_link_libraries(ll_test PRIVATE ll)
# enable_testing()
# add_test(NAME ll_test COMMAND $<TARGET_FILE:ll_test>)